2007-01-26 [paul]	2.7.2cvs1

	* NEWS
	* README
	* RELEASE_NOTES
	* configure.ac
		bump up version number following
		stable release

2007-01-25 [mones]	2.7.1cvs60

	* po/es.po
		updated thousands of strings (well, probably less ;-)

2007-01-25 [colin]	2.7.1cvs59

	* src/matcher.c
		Fix 2nd-run loss of matcherrc on new
		configurations. 

2007-01-25 [wwp]	2.7.1cvs58

	* src/mimeview.c
		fix handling of empty value in attach_save_directory too, thanks
		to Colin.

2007-01-25 [wwp]	2.7.1cvs57

	* src/gtk/filesel.c
		fix handling of empty value in attach_load_directory,
		thanks to Colin.

2007-01-25 [wwp]	2.7.1cvs56

	* src/plugins/dillo_viewer/dillo_prefs.h
		fix a typo.

2007-01-25 [colin]	2.7.1cvs55

	* src/matcher.c
	* src/matcher.h
	* src/matcher_parser_parse.y
	* src/prefs_matcher.c
		Add matching on the spam flag

2007-01-24 [colin]	2.7.1cvs54

	* src/folder.c
	* src/common/xml.c
	* src/common/xml.h
		Make sure folderlist.xml is correctly
		written before overwriting it.
	* src/procmsg.c
	* src/procmsg.h
	* src/summaryview.c
	* src/plugins/bogofilter/bogofilter.c
	* src/plugins/bogofilter/bogofilter.h
	* src/plugins/bogofilter/bogofilter_gtk.c
	* src/plugins/spamassassin/spamassassin.c
	* src/plugins/spamassassin/spamassassin.h
	* src/plugins/spamassassin/spamassassin_gtk.c
		Move spam to the correct trash folder after
		learning, if spam directory isn't set.

2007-01-23 [paul]	2.7.1cvs53

	* src/plugins/bogofilter/bogofilter_gtk.c
		fix sensitivity of "Insert X-Bogosity header"
		option

2007-01-23 [colin]	2.7.1cvs52

	* src/toolbar.c
		Translate toolbar items text if
		they're translatable (default)
	* src/addrcache.c
	* src/addrcache.h
	* src/addritem.c
	* src/addritem.h
	* src/codeconv.c
	* src/codeconv.h
	* src/jpilot.c
	* src/jpilot.h
	* src/ldapctrl.c
	* src/ldapctrl.h
	* src/ldapquery.h
	* src/ldif.c
	* src/ldif.h
	* src/etpan/etpan-thread-manager.c
	* src/etpan/etpan-thread-manager.h
	* src/gtk/gtkutils.c
	* src/gtk/gtkutils.h
		More static functions
